@@ -1,10 +1,8 @@
 package org.fluentlenium.core.wait;
-
 import com.google.common.base.Predicate;
 import org.fluentlenium.core.filter.Filter;
 import org.fluentlenium.core.filter.FilterType;
 import org.fluentlenium.core.search.Search;
-import org.fluentlenium.core.wait.size.FluentSizeBuilder;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.support.ui.FluentWait;
 
@@ -12,53 +10,18 @@ import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.fluentlenium.core.wait.WaitMessage.*;
+
 public class FluentWaitBuilder {
-    String selector;
-    private FluentWait wait;
+    private List<Filter> filters = new ArrayList<Filter>();
     private Search search;
-    private List<Filter> filter = new ArrayList<Filter>();
+    private String selector;
+    private FluentWait wait;
 
     public FluentWaitBuilder(Search search, FluentWait fluentWait, String selector) {
         this.selector = selector;
         wait = fluentWait;
         this.search = search;
-
-    }
-
-
-    public void isPresent() {
-        Predicate isPresent = new com.google.common.base.Predicate<WebDriver>() {
-            public boolean apply(@Nullable WebDriver webDriver) {
-                int size;
-                if (filter.size() > 0) {
-                    size = search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).size();
-                } else {
-                    size = search.find(selector).size();
-                }
-                return size > 0;
-            }
-        };
-        wait.until(isPresent);
-    }
-
-    public void hasSize(final int size) {
-        Predicate hasSize = new com.google.common.base.Predicate<WebDriver>() {
-            public boolean apply(@Nullable WebDriver webDriver) {
-                int size1;
-                if (filter.size() > 0) {
-                    size1 = search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).size();
-                } else {
-                    size1 = search.find(selector).size();
-                }
-                return size1 == size;
-
-            }
-        };
-        wait.until(hasSize);
-    }
-
-    public FluentSizeBuilder hasSize() {
-        return new FluentSizeBuilder(search, wait, selector, filter);
     }
 
     /**
@@ -70,33 +33,25 @@ public class FluentWaitBuilder {
     public void hasAttribute(final String attribute, final String value) {
         Predicate hasAttribute = new com.google.common.base.Predicate<WebDriver>() {
             public boolean apply(@Nullable WebDriver webDriver) {
-                if (filter.size() > 0) {
-                    return search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).getAttributes(attribute).contains(value);
+                if (filters.size() > 0) {
+                    return search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).getAttributes(attribute).contains(value);
                 } else {
                     return search.find(selector).getAttributes(attribute).contains(value);
                 }
             }
         };
-        wait.until(hasAttribute);
+        until(wait, hasAttribute, filters, hasAttributeMessage(selector, attribute, value));
     }
 
-
-    /**
-     * check if the FluentWait has the corresponding text
-     *
-     * @param value
-     */
-    public void hasText(final String value) {
-        Predicate hasText = new com.google.common.base.Predicate<WebDriver>() {
-            public boolean apply(@Nullable WebDriver webDriver) {
-                if (filter.size() > 0) {
-                    return search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).getTexts().contains(value);
-                } else {
-                    return search.find(selector).getTexts().contains(value);
-                }
+    static void until(FluentWait wait, Predicate present, List<Filter> filters, String defaultMessage) {
+        StringBuilder message = new StringBuilder(defaultMessage);
+        if (filters != null && !filters.isEmpty()) {
+            for (Filter filter : filters) {
+                message.append(filter.toString());
             }
-        };
-        wait.until(hasText);
+            message.append(" Filters : ");
+        }
+        wait.withMessage(message.toString()).until(present);
     }
 
     /**
@@ -107,14 +62,14 @@ public class FluentWaitBuilder {
     public void hasId(final String value) {
         Predicate hasId = new com.google.common.base.Predicate<WebDriver>() {
             public boolean apply(@Nullable WebDriver webDriver) {
-                if (filter.size() > 0) {
-                    return search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).getIds().contains(value);
+                if (filters.size() > 0) {
+                    return search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).getIds().contains(value);
                 } else {
                     return search.find(selector).getIds().contains(value);
                 }
             }
         };
-        wait.until(hasId);
+        until(wait, hasId, filters, hasIdMessage(selector, value));
     }
 
     /**
@@ -126,31 +81,81 @@ public class FluentWaitBuilder {
         Predicate hasName = new com.google.common.base.Predicate<WebDriver>() {
             public boolean apply(@Nullable WebDriver webDriver) {
                 int size1;
-                if (filter.size() > 0) {
-                    return search.find(selector, (Filter[]) filter.toArray(new Filter[filter.size()])).getNames().contains(value);
+                if (filters.size() > 0) {
+                    return search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).getNames().contains(value);
                 } else {
                     return search.find(selector).getNames().contains(value);
                 }
             }
         };
-        wait.until(hasName);
+        until(wait, hasName, filters, hasNameMessage(selector, value));
     }
 
-    public FluentWaitBuilder withText(final String value) {
-        filter.add(org.fluentlenium.core.filter.FilterConstructor.withText(value));
-        return this;
+    /**
+     * Check that the element have a customized size
+     *
+     * @return
+     */
+    public FluentSizeBuilder hasSize() {
+        return new FluentSizeBuilder(search, wait, selector, filters);
     }
 
-    public FluentWaitBuilder withId(final String value) {
-        filter.add(org.fluentlenium.core.filter.FilterConstructor.withId(value));
-        return this;
+    /**
+     * Check that the element have the size indicated
+     *
+     * @param size
+     */
+    public void hasSize(final int size) {
+        Predicate hasSize = new com.google.common.base.Predicate<WebDriver>() {
+            public boolean apply(@Nullable WebDriver webDriver) {
+                int size1;
+                if (filters.size() > 0) {
+                    size1 = search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).size();
+                } else {
+                    size1 = search.find(selector).size();
+                }
+                return size1 == size;
+            }
+        };
+        until(wait, hasSize, filters, hasSizeMessage(selector, size));
     }
 
-    public FluentWaitBuilder withName(final String value) {
-        filter.add(org.fluentlenium.core.filter.FilterConstructor.withName(value));
-        return this;
+    /**
+     * check if the FluentWait has the corresponding text
+     *
+     * @param value
+     */
+    public void hasText(final String value) {
+        Predicate hasText = new com.google.common.base.Predicate<WebDriver>() {
+            public boolean apply(@Nullable WebDriver webDriver) {
+                if (filters.size() > 0) {
+                    return search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).getTexts().contains(value);
+                } else {
+                    return search.find(selector).getTexts().contains(value);
+                }
+            }
+        };
+        until(wait, hasText, filters, hasTextMessage(selector, value));
     }
 
+    /**
+     * Check that the element is present
+     */
+    public void isPresent() {
+        Predicate isPresent = new com.google.common.base.Predicate<WebDriver>() {
+            public boolean apply(@Nullable WebDriver webDriver) {
+                int size;
+                if (filters.size() > 0) {
+                    size = search.find(selector, (Filter[]) filters.toArray(new Filter[filters.size()])).size();
+                } else {
+                    size = search.find(selector).size();
+                }
+                return size > 0;
+            }
+        };
+
+        until(wait, isPresent, filters, isPresentMessage(selector));
+    }
 
     /**
      * Create a filter builder for the attribute
@@ -160,16 +165,6 @@ public class FluentWaitBuilder {
      */
     public FluentLeniumWaitBuilder with(String attribute) {
         return new FluentLeniumWaitBuilder(this, attribute);
-    }
-
-    /**
-     * Create a filter builder for the attribute by name
-     *
-     * @param
-     * @return
-     */
-    public FluentLeniumWaitBuilder withName() {
-        return new FluentLeniumWaitBuilder(this, FilterType.NAME);
     }
 
     /**
@@ -183,6 +178,38 @@ public class FluentWaitBuilder {
     }
 
     /**
+     * Check that the element has the corrsponding id
+     *
+     * @param value
+     * @return
+     */
+    public FluentWaitBuilder withId(final String value) {
+        filters.add(org.fluentlenium.core.filter.FilterConstructor.withId(value));
+        return this;
+    }
+
+    /**
+     * Create a filter builder for the attribute by name
+     *
+     * @param
+     * @return
+     */
+    public FluentLeniumWaitBuilder withName() {
+        return new FluentLeniumWaitBuilder(this, FilterType.NAME);
+    }
+
+    /**
+     * Check that the element has the corrsponding name
+     *
+     * @param value
+     * @return
+     */
+    public FluentWaitBuilder withName(final String value) {
+        filters.add(org.fluentlenium.core.filter.FilterConstructor.withName(value));
+        return this;
+    }
+
+    /**
      * Create a filter builder for the attribute by text
      *
      * @param
@@ -192,8 +219,20 @@ public class FluentWaitBuilder {
         return new FluentLeniumWaitBuilder(this, FilterType.TEXT);
     }
 
-
-    public void addFilter(Filter filter) {
-        this.filter.add(filter);
+    /**
+     * Check that the element has the corresponding text
+     *
+     * @param value
+     * @return
+     */
+    public FluentWaitBuilder withText(final String value) {
+        filters.add(org.fluentlenium.core.filter.FilterConstructor.withText(value));
+        return this;
     }
+
+    void addFilter(Filter filter) {
+        this.filters.add(filter);
+    }
+
+
 }
